Fix: Allow all hosts temporarily to debug hostname validation

--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -6,5 +6,5 @@
       "Microsoft.EntityFrameworkCore": "Error"
     }
   },
-  "AllowedHosts": "luma-laundry.app,www.luma-laundry.app,luma-laundry-production.up.railway.app,*.railway.app"
+  "AllowedHosts": "*"
 }
