Add missing index.html and fix .gitignore to allow HTML files in ClientApp

--- a/.gitignore
+++ b/.gitignore
@@ -108,7 +108,11 @@ $RECYCLE.BIN/
 .DS_Store
 
 # Test files and debug outputs
-*.html
+admin_*.html
+login_*.html
+logout_*.html
+orders_*.html
+user_*.html
 *.txt
 cookies.txt
 
