Fix React app serving - build to wwwroot root with proper asset paths

--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,10 @@ cookies.txt
 # VS Code
 .vscode/
 
+# Vite build output
+wwwroot/assets/
+wwwroot/index.html
+
 # Environment files
 .env
 .env.local
