--- a/Services/LaundryApp.Api/appsettings.json
+++ b/Services/LaundryApp.Api/appsettings.json
@@ -1,11 +1,9 @@
 {
-  "Database": {
-    "Path": "laundry.db"
-  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
