--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -1,10 +1,16 @@
 {
+  "Database": {
+    "Path": "/var/data/laundry.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning",
       "Microsoft.AspNetCore": "Warning",
       "Microsoft.EntityFrameworkCore": "Error"
     }
+  },
+  "LayeredServices": {
+    "ApiOnlyMode": true
   },
   "AllowedHosts": "*"
 }
