--- a/Services/LaundryApp.Worker/appsettings.json
+++ b/Services/LaundryApp.Worker/appsettings.json
@@ -1,7 +1,6 @@
 {
   "LayeredServices": {
-    "ApiBaseUrl": "http://localhost:5080",
-    "ApiOnlyMode": false
+    "ApiBaseUrl": "http://localhost:5080"
   },
   "Email": {
     "SmtpHost": "",
@@ -15,8 +14,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.Hosting.Lifetime": "Information"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
