Set support email as default admin account

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -2,6 +2,9 @@
   "Database": {
     "Path": "laundry.db"
   },
+  "DefaultAdmin": {
+    "Email": "Support@luma-laundry.app"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
