--- a/appsettings.Production.json
+++ b/appsettings.Production.json
@@ -12,5 +12,8 @@
   "LayeredServices": {
     "ApiOnlyMode": true
   },
+  "DefaultAdmin": {
+    "Email": "Support@luma-laundry.app"
+  },
   "AllowedHosts": "*"
 }
