--- a/appsettings.json
+++ b/appsettings.json
@@ -9,8 +9,12 @@
     "EnableSsl": "true",
     "Username": "",
     "Password": "",
-    "FromAddress": "",
+    "FromAddress": "Support@luma-laundry.app",
     "FromName": "LUMA Laundry"
+  },
+  "DefaultAdmin": {
+    "Email": "Support@luma-laundry.app",
+    "Password": "Admin123!"
   },
   "Logging": {
     "LogLevel": {
