Add Stripe setup-intent, quote, charge, and webhook workflow

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -5,6 +5,11 @@
   "DefaultAdmin": {
     "Email": "Support@luma-laundry.app"
   },
+  "Stripe": {
+    "SecretKey": "",
+    "PublishableKey": "",
+    "WebhookSecret": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
