--- a/appsettings.json
+++ b/appsettings.json
@@ -16,6 +16,11 @@
     "Email": "Support@luma-laundry.app",
     "Password": "Admin123!"
   },
+  "Stripe": {
+    "SecretKey": "",
+    "PublishableKey": "",
+    "WebhookSecret": ""
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
